[gd_scene load_steps=42 format=3 uid="uid://drmsvya5vdx65"]

[ext_resource type="Texture2D" uid="uid://76dljaeimam1" path="res://Assets/BUTT_C.png" id="1_3ftf1"]
[ext_resource type="Texture2D" uid="uid://cqa6r0md8lct2" path="res://Assets/TAIL_C.png" id="2_vdncb"]
[ext_resource type="Texture2D" uid="uid://bid4i25qetdmx" path="res://Assets/TAILS.png" id="3_kg647"]
[ext_resource type="Texture2D" uid="uid://be7ausi6tfjmr" path="res://Assets/newdog_LegsBACK_sheet_C.png" id="4_3f1u3"]
[ext_resource type="Script" path="res://SimplePlayerCharacter.gd" id="5_sxnbw"]
[ext_resource type="Texture2D" uid="uid://br21lo6rpcuvq" path="res://Assets/FACES_C.png" id="6_wjr40"]
[ext_resource type="Texture2D" uid="uid://c1xp2p4lnown3" path="res://Assets/newdog_legsFRONT_sheet_C.png" id="7_qkvwy"]
[ext_resource type="Texture2D" uid="uid://c821bbhducux1" path="res://Assets/mapmaybe_base.png" id="8_falp5"]
[ext_resource type="PackedScene" uid="uid://c7508ame74p7h" path="res://DogBone.tscn" id="9_ixidc"]
[ext_resource type="PackedScene" uid="uid://bmdwqot80pmgt" path="res://Running_dog.tscn" id="10_vc4jv"]
[ext_resource type="Script" path="res://running_dog.gd" id="11_0ie8g"]
[ext_resource type="PackedScene" uid="uid://clgtvb1djen1s" path="res://bench.tscn" id="12_coeje"]
[ext_resource type="PackedScene" uid="uid://cek8fr66labht" path="res://fountain.tscn" id="13_bnlvw"]
[ext_resource type="Script" path="res://DogCrackerSpawner.gd" id="14_h3h1w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xmaxq"]
atlas = ExtResource("3_kg647")
region = Rect2(23, 0, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj3i6"]
atlas = ExtResource("3_kg647")
region = Rect2(46, 0, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_2afur"]
atlas = ExtResource("3_kg647")
region = Rect2(0, 0, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt3ar"]
atlas = ExtResource("3_kg647")
region = Rect2(46, 0, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_taul4"]
atlas = ExtResource("3_kg647")
region = Rect2(69, 0, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_3l62o"]
atlas = ExtResource("3_kg647")
region = Rect2(0, 0, 23, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_4dxs5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmaxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj3i6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2afur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt3ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_taul4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt3ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l62o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt3ar")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4rppu"]
atlas = ExtResource("4_3f1u3")
region = Rect2(0, 0, 32, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_4layu"]
atlas = ExtResource("4_3f1u3")
region = Rect2(32, 0, 32, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjimy"]
atlas = ExtResource("4_3f1u3")
region = Rect2(64, 0, 32, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g5d7"]
atlas = ExtResource("4_3f1u3")
region = Rect2(96, 0, 32, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_4js1l"]
atlas = ExtResource("4_3f1u3")
region = Rect2(128, 0, 32, 77)

[sub_resource type="SpriteFrames" id="SpriteFrames_d51rk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rppu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4layu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjimy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g5d7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4js1l")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7we7l"]
size = Vector2(32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_45bpw"]
atlas = ExtResource("6_wjr40")
region = Rect2(43, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v2bu"]
atlas = ExtResource("6_wjr40")
region = Rect2(0, 0, 43, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_2kam3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_45bpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v2bu")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_dlucr"]
atlas = ExtResource("7_qkvwy")
region = Rect2(0, 0, 32, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0jc0"]
atlas = ExtResource("7_qkvwy")
region = Rect2(32, 0, 32, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqkaf"]
atlas = ExtResource("7_qkvwy")
region = Rect2(64, 0, 32, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgbr8"]
atlas = ExtResource("7_qkvwy")
region = Rect2(96, 0, 32, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjwsp"]
atlas = ExtResource("7_qkvwy")
region = Rect2(128, 0, 32, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_rudug"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlucr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0jc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqkaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgbr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjwsp")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_fj0g7"]
distance = -509.11

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6ntvb"]
normal = Vector2(0, 1)
distance = -501.2

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_hivew"]
normal = Vector2(1, 0)
distance = -914.25

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_rkj8e"]
normal = Vector2(-1, 0)
distance = -898.5

[node name="Main" type="Node2D"]

[node name="Node2D" type="Node2D" parent="."]

[node name="Butt" type="Sprite2D" parent="Node2D"]
texture_filter = 1
position = Vector2(0, -33)
texture = ExtResource("1_3ftf1")

[node name="Tail2" type="Sprite2D" parent="Node2D/Butt"]
z_index = -2
texture_filter = 1
position = Vector2(0, -11)
texture = ExtResource("2_vdncb")
region_enabled = true
region_rect = Rect2(7, 3, 6, 14)

[node name="Tail" type="AnimatedSprite2D" parent="Node2D/Butt"]
visible = false
z_index = -1
texture_filter = 1
position = Vector2(1, -11)
sprite_frames = SubResource("SpriteFrames_4dxs5")
frame = 2
frame_progress = 0.490707

[node name="Legs_back" type="AnimatedSprite2D" parent="Node2D/Butt"]
z_index = -1
position = Vector2(0, 13)
sprite_frames = SubResource("SpriteFrames_d51rk")
frame_progress = 0.618145

[node name="Area2D" type="Area2D" parent="Node2D"]
script = ExtResource("5_sxnbw")
MOVE_SPEED = 300

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_7we7l")

[node name="Head" type="AnimatedSprite2D" parent="Node2D/Area2D"]
z_index = 1
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_2kam3")
frame_progress = 0.897358

[node name="Legs" type="AnimatedSprite2D" parent="Node2D/Area2D/Head"]
z_index = -1
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_rudug")
frame_progress = 0.515546

[node name="Camera2D" type="Camera2D" parent="Node2D/Area2D"]
zoom = Vector2(1.63, 1.63)
limit_left = -953
limit_top = -535
limit_right = 953
limit_bottom = 535
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 11.86

[node name="MapmaybeBase" type="Sprite2D" parent="."]
z_index = -3
texture = ExtResource("8_falp5")

[node name="Area2D" parent="." instance=ExtResource("9_ixidc")]
position = Vector2(6, 126)

[node name="Area2D2" parent="." instance=ExtResource("10_vc4jv")]
position = Vector2(814, 454)
script = ExtResource("11_0ie8g")

[node name="Walls" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Walls" groups=["Dangers"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Area2D"]
shape = SubResource("WorldBoundaryShape2D_fj0g7")

[node name="Area2D2" type="Area2D" parent="Walls" groups=["Dangers"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Area2D2"]
shape = SubResource("WorldBoundaryShape2D_6ntvb")

[node name="Bench" parent="Walls/Area2D2" instance=ExtResource("12_coeje")]
position = Vector2(-586, 91)

[node name="Fountain" parent="Walls/Area2D2" instance=ExtResource("13_bnlvw")]
position = Vector2(-577, -160)

[node name="Area2D3" type="Area2D" parent="Walls" groups=["Dangers"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Area2D3"]
shape = SubResource("WorldBoundaryShape2D_hivew")

[node name="Area2D4" type="Area2D" parent="Walls" groups=["Dangers"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Area2D4"]
shape = SubResource("WorldBoundaryShape2D_rkj8e")

[node name="PickupSpawner" type="Node2D" parent="."]
script = ExtResource("14_h3h1w")

[node name="PickupPoints" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="PickupPoints"]
position = Vector2(5, 394)

[node name="Node2D2" type="Node2D" parent="PickupPoints"]
position = Vector2(-597, -23)

[node name="Node2D3" type="Node2D" parent="PickupPoints"]
position = Vector2(691, -395)

[node name="Node2D4" type="Node2D" parent="PickupPoints"]
position = Vector2(803, 289)

[node name="Node2D5" type="Node2D" parent="PickupPoints"]
position = Vector2(261, -237)

[node name="Node2D6" type="Node2D" parent="PickupPoints"]
position = Vector2(-785, -417)

[node name="Node2D7" type="Node2D" parent="PickupPoints"]
position = Vector2(-797, 376)

[node name="Node2D8" type="Node2D" parent="PickupPoints"]
position = Vector2(808, 216)

[node name="Node2D9" type="Node2D" parent="PickupPoints"]
position = Vector2(393, 100)

[node name="Node2D10" type="Node2D" parent="PickupPoints"]
position = Vector2(593, -100)

[connection signal="area_entered" from="Node2D/Area2D" to="Node2D/Area2D" method="_on_area_entered"]
